--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DEFAULT_NETWORK: lasp_net
+#`DEFAULT_NETWORK: default_net` устанавливает имя сети по умолчанию на "default_net". Это означает, что если для контейнера не указана сеть, он будет подключен к сети "default_net".
+DEFAULT_NETWORK: default_net
