--- a/traefik.env
+++ b/traefik.env
@@ -1,2 +1,4 @@
+#`TRAEFIK_USER: USER` устанавливает переменную окружения `TRAEFIK_USER` со значением `USER`. Эта переменная может использоваться запущенным приложением или скриптом для доступа к значению `USER`.
 TRAEFIK_USER: USER
+#`TRAEFIK_PASSWORD: PASSWORD_HASH` устанавливает переменную окружения с именем `TRAEFIK_PASSWORD` и значением `PASSWORD_HASH`. Эта переменная может использоваться запущенным приложением или скриптом для доступа к значению `PASSWORD_HASH`. `PASSWORD_HASH` - это хэшированная версия пароля, который будет использоваться для аутентификации.
 TRAEFIK_PASSWORD: PASSWORD_HASH
