--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 #`version: "3.5"` указывает версию формата файла Docker Compose, который будет использоваться. В данном случае это версия 3.5. Эта версия поддерживает такие возможности, как объекты `config`, `секреты` и опции `deploy` для развертывания сервисов в рое.
 version: "3.5"
 
-#Это определение сети под названием "docker_lasp" с именем сети по умолчанию. Эта сеть может использоваться для соединения различных служб, определенных в файле Docker Compose, позволяя им взаимодействовать друг с другом.
+#Это определение сети под названием "docker_net" с именем сети по умолчанию. Эта сеть может использоваться для соединения различных служб, определенных в файле Docker Compose, позволяя им взаимодействовать друг с другом.
 networks:
-  docker_lasp:
+  docker_net:
     name: $DEFAULT_NETWORK
 
 services:
@@ -58,6 +58,6 @@ services:
       - "./traefik/dashboard_auth/sampleuser.yml:/dashboard_auth/sampleuser.yml"
     #`container_name: traefik` - это указание имени контейнера Docker, который будет создан для сервиса Traefik. В данном случае контейнер будет назван "traefik". Это позволит вам легко ссылаться на контейнер и управлять им, используя его имя вместо идентификатора контейнера.
     container_name: traefik
-    #`networks: - "docker_lasp"` определяет сеть, в которой будет работать служба Traefik. В данном случае указывается сеть с именем "docker_lasp". Это позволяет службе Traefik взаимодействовать с другими службами, работающими в той же сети, и получать доступ к таким ресурсам, как сокет Docker и сертификаты Let's Encrypt, которые смонтированы как тома в других контейнерах в той же сети.
+    #`networks: - "docker_net"` определяет сеть, в которой будет работать служба Traefik. В данном случае указывается сеть с именем "docker_net". Это позволяет службе Traefik взаимодействовать с другими службами, работающими в той же сети, и получать доступ к таким ресурсам, как сокет Docker и сертификаты Let's Encrypt, которые смонтированы как тома в других контейнерах в той же сети.
     networks:
-      - "docker_lasp"
+      - "docker_net"
